--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -6,6 +6,138 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#173 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N=int(input())\n",
+    "S=[]\n",
+    "for _ in range(N):\n",
+    "    S.append(input())\n",
+    "ans=[0,0,0,0]\n",
+    "for i in S:\n",
+    "    if i==\"AC\":\n",
+    "        ans[0]+=1\n",
+    "    elif i==\"WA\":\n",
+    "        ans[1]+=1\n",
+    "    elif i==\"TLE\":\n",
+    "        ans[2]+=1\n",
+    "    else:\n",
+    "        ans[3]+=1\n",
+    "print(\"AC x\",ans[0])\n",
+    "print(\"WA x\",ans[1])\n",
+    "print(\"TLE x\",ans[2])\n",
+    "print(\"RE x\",ans[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#172 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 4 1\n",
+      "10 10 10 10 10\n",
+      "10 10 10 10\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "N,M,K=map(int,input().split())\n",
+    "A=list(map(int,input().split()))\n",
+    "B=list(map(int,input().split()))\n",
+    "ans=0\n",
+    "count=0\n",
+    "if sum(A)+sum(B)<=K:\n",
+    "    print(len(A)+len(B))\n",
+    "else:\n",
+    "    while ans<K and (len(A)>0 or len(B)>0):\n",
+    "        if len(B)==0:\n",
+    "            ans+=A[0]\n",
+    "            A.pop(0)\n",
+    "        elif len(A)==0:\n",
+    "            ans+=B[0]\n",
+    "            B.pop(0)\n",
+    "        else:\n",
+    "            if A[0]>=B[0]:\n",
+    "                ans+=B[0]\n",
+    "                B.pop(0)\n",
+    "                count+=1\n",
+    "            else:\n",
+    "                ans+=A[0]\n",
+    "                A.pop(0)\n",
+    "                count+=1\n",
+    "    print(count-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 10, 20]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[10,10,20,30]\n",
+    "A,B=[0],[0]\n",
+    "for i in range(2):\n",
+    "    A.append(A[i]+a[i])\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 10, 20, 30]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#171 A"
    ]
   },
@@ -5040,6 +5172,56 @@
     "    print(W*H/2,1)\n",
     "else:\n",
     "    print(W*H/2,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#129 C × DP問題"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 1\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n, m = map(int, input().split())\n",
+    "denger = [False] * (n + 1)\n",
+    "for i in range(m):\n",
+    "    denger[int(input())] = True\n",
+    " \n",
+    "DP = [0] * (n + 1)\n",
+    "DP[0] = 1\n",
+    "for i in range(n):\n",
+    "    if not denger[i + 1]:\n",
+    "        DP[i + 1] += DP[i]\n",
+    "    if i + 2 <= n and not denger[i + 2]:\n",
+    "        DP[i + 2] += DP[i]\n",
+    " \n",
+    "print(DP[-1] % 1000000007)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#DP問題1\n"
    ]
   },
   {
