--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -41,6 +41,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#172 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S=input()\n",
+    "T=input()\n",
+    "ans=0\n",
+    "for i in range(len(S)):\n",
+    "    if S[i]!=T[i]:\n",
+    "        ans+=1\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#172 C"
    ]
   },
